# AlphaLibras-Nuclic

./: README.md  pyproject.toml
alphalibras-app/: client.html  debug.py  main.py
alphalibras-app/core/: model_inference.py
alphalibras-app/models/: modelo_completo.keras  modelo_libras.tflite
alphalibras-app/routers/: classification.py
alphalibras-app/utils/: hand_preprocess.py
notebook/: Notebook_01_Análise_do_Dataset.ipynb  treinamento_do_modelo.ipynb
