[project]
name = "alphalibras-nuclic"
version = "0.1.0"
description = ""
authors = [
    {name = "Anderson Ivanildo",email = "andersonivanildo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (<4.9)",
    "mediapipe (>=0.10.21,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
